--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
                 <button class="dark-mode-control" aria-label="Alternar Dark Mode">
                     <img src="./assets/icons/moon.svg" alt="Modo Escuro" class="dark-mode-icon">
                 </button>
-                <!-- Adicionando VLibras -->
-                <div vw class="enabled">
-                    <div vw-access-button class="active"></div>
-                    <div vw-plugin-wrapper>
-                        <div class="vw-plugin-top-wrapper"></div>
-                    </div>
-                </div>
             </div>
         </div>
     </header>
@@ -64,11 +57,16 @@
         <p>© 2024 Portal de Conhecimento Gratuito. Todos os direitos reservados.</p>
     </footer>
 
-    <!-- Script do VLibras -->
-    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script>
+    <script defer src="scripts.js"></script>
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
-    </script>
-    <script src="scripts.js"></script>
+      </script>
 </body>
 </html>
