--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
         </div>
     </section>
     
-    
-
     <!-- Lista de Livros -->
     <main class="container" role="main" aria-labelledby="main-heading">
         <section class="book-list" aria-label="Lista de livros disponíveis">
@@ -56,8 +54,6 @@
     <footer role="contentinfo">
         <p>© 2024 Portal de Conhecimento Gratuito. Todos os direitos reservados.</p>
     </footer>
-
-    <script defer src="scripts.js"></script>
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -68,5 +64,6 @@
       <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
       </script>
+    <script src="scripts.js"></script>
 </body>
 </html>
